--- a/mock-test/pom.xml
+++ b/mock-test/pom.xml
@@ -15,38 +15,21 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-   <build>
-  <plugins>
-    <plugin>
-      <groupId>org.codehaus.cargo</groupId>
-      <artifactId>cargo-maven2-plugin</artifactId>
-      <version>1.3.2</version>
-      <configuration>
- 
-        <!-- Container configuration -->
-        <container>
-          <containerId>tomcat9x</containerId>
-          <type>remote</type>
-        </container>
- 
-        <!-- Configuration to use with the container -->
-        <configuration>
-          <type>runtime</type>
-          <properties>
-            <cargo.hostname>tomcat.example.com</cargo.hostname>
-            <cargo.servlet.port>80</cargo.servlet.port>
-            <cargo.remote.username>manager</cargo.remote.username>
-            <cargo.remote.password>manager</cargo.remote.password>
-          </properties>
-        </configuration>
- 
-        <!-- Deployer configuration -->
-        <deployer>
-          <type>remote</type>
-        </deployer>
-      </configuration>
-    </plugin>
-  </plugins>
-      <finalName>mock-test</finalName>
+<build>
+    <plugins>
+        <!-- Other plugins -->
+
+        <plugin>
+            <groupId>org.apache.tomcat.maven</groupId>
+            <artifactId>tomcat7-maven-plugin</artifactId>
+            <version>2.2</version>
+            <configuration>
+                <url>http://localhost:9000/mock-test/index.jsp</url>
+                <server>TomcatServer</server>
+                <path>/mock-test</path>
+            </configuration>
+        </plugin>
+    </plugins>
 </build>
+ 
 </project>
