--- a/mock-test/pom.xml
+++ b/mock-test/pom.xml
@@ -16,6 +16,6 @@
     </dependency>
   </dependencies>
 <build>
-    <finalName>mock-test</finalName>
+    <finalName>mock-test1</finalName>
   </build>
 </project>
