--- a/mock-test/pom.xml
+++ b/mock-test/pom.xml
@@ -18,4 +18,13 @@
 <build>
     <finalName>mock-test1</finalName>
   </build>
+  <build>
+  <plugins>
+    <plugin>
+      <groupId>org.sonarsource.scanner.maven</groupId>
+      <artifactId>sonar-maven-plugin</artifactId>
+      <version>5.5.0.6356</version>
+    </plugin>
+  </plugins>
+</build>
 </project>
