--- a/mock-test/pom.xml
+++ b/mock-test/pom.xml
@@ -23,6 +23,11 @@
       <artifactId>sonar-maven-plugin</artifactId>
       <version>5.5.0.6356</version>
     </plugin>
-  </plugins>
+     <plugin>
+        <groupId>org.sonarsource.scanner.maven</groupId>
+        <artifactId>sonar-maven-plugin</artifactId>
+        <version>yourPluginVersion</version>
+      </plugin>
+    </plugins>
 </build>
 </project>
