--- a/mock-test/pom.xml
+++ b/mock-test/pom.xml
@@ -11,6 +11,7 @@
   <sonar.organization>test</sonar.organization>
   <sonar.projectKey>org.sonarqube:sonarqube-scanner</sonar.projectKey>
   <sonar.host.url>http://localhost:9010/</sonar.host.url>
+  <sonar.token>squ_6f46dc82815eedee092dc6dbe740bddcf752adcc</sonar.token>
 </properties>
   <dependencies>
     <dependency>
